bugfix:text nowrap

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -87,6 +87,10 @@
       text-rendering: optimizeLegibility;
       -webkit-font-smoothing: antialiased;
     }
+
+    &-text {
+      white-space: nowrap;
+    }
   }
 }
 
